k8s/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: NodePort
  selector:
    app: backend
  # ports:
  #   - protocol: TCP
  #     port: 8888
  #     targetPort: 8888
  # type: ClusterIP
  ports:
    - port: 8888
      targetPort: 80
      nodePort: 31000 # Choose an available node port
