k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-backend
  labels:
    app: laravel-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-backend
  template:
    metadata:
      labels:
        app: laravel-backend
    spec:
      containers:
        - name: laravel-backend
          image: syedkamruzzaman/uni_backend:02
          # ports:
          #   - containerPort: 8000
        - name: nginx-backend
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config-backend
              subPath: default.conf
              mountPath: /etc/nginx/conf.d/default.conf
              readOnly: true
            - name: nginx-logs
              mountPath: /var/log/nginx    
      volumes:
        - name: backend-storage
          persistentVolumeClaim:
            claimName: backend-pvc
        - name: nginx-config-backend
          configMap:
            name: nginx-config-backend
        # - name: nginx-logs
        #   persistentVolumeClaim:
        #     claimName: nginx-log-pvc   

---
apiVersion: v1
kind: Service
metadata:
  name: laravel-backend
spec:
  selector:
    app: laravel-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
